--- a/index.html
+++ b/index.html
@@ -4,60 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalogo de Animes - Labenu</title>
-    <script src="index.js"></script>
+    <title>Labenimes</title>
+    <!-- <script src="index.js"></script> -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Cabeçalho -->
     <header>
-        <h1>Catalogo de Animes</h1>
+        <h1>LABENIMES</h1>
     </header>
     <!-- Seção principal -->
     <main>
-        <article>
-            <!-- 1ª divisão, input e botão -->
-            <form>
-                <label for="busca"></label>
-                <input type="text" name="busca" id="id-busca">
-                <button type="submit">Buscar</button>
-            </form>
-            <!-- 2ª divisão, seçtions -->
-        <section>
-            <!-- Itens da Lista -->
-            <img src="./assets/onepiece.jpg" alt="One Piece">
-            <ul><li><a href="https://www.crunchyroll.com/pt-br/one-piece" target="_blank">One Piece</a></li>
-                <li>Avaliação: 4.7</li>
-                <li>Em andamento: Sim</li>
-                <li>Genero: "Ficção de Aventura","Fantasia"</li>
-            </ul>
-        </section>
-        <section>
-            <!-- Itens da Lista -->
-            <img src="./assets/narutoshippuden.jpg" alt="Naruto Shippuden">
-            <ul><li><a href="https://www.crunchyroll.com/pt-br/naruto-shippuden" target="_blank">Naruto Shippuden</a></li>
-                <li>Avaliação: 4.7</li>
-                <li>Em andamento: Não</li>
-                <li>Genero: "Ficção de Aventura","Fantasia Cômica","Artes Marciais"</li>
-            </ul>
-        </section>
+        <div class ="container">
 
-        <section>
-            <!-- Itens da Lista -->
-            <img src="./assets/hunterxhunter.jpg" alt="HunterxHunter">
-            <ul><li><a href="https://www.crunchyroll.com/pt-br/hunter-x-hunter" target="_blank">Hunter x Hunter</a></li>
-                <li>Avaliação: 4.8</li>
-                <li>Em andamento: Sim</li>
-                <li>Genero: "Ficção de Aventura","Fantasia","Artes Marciais"</li>
-            </ul>
-        </section>
+            <!-- 1ª divisão, input e botão -->
+            <form class="box-buscador">
+                <label for="busca"></label>
+                <input type="text" name="busca" id="id-busca" class="input-busca" placeholder="Pesquisar">
+                <button type="submit" class="button-buscar">Buscar</button>
+            </form>
+
+                <!-- 2ª divisão, seçtions -->
+            <div class="box-catalogo">
+                <section class="filmes">
+                    <!-- Itens da Lista -->
+                    <img src="./assets/onepiece.jpg" alt="One Piece">
+                    <ul><li><a href="https://www.crunchyroll.com/pt-br/one-piece" target="_blank">One Piece</a></li>
+                        <li>Avaliação: 4.7</li>
+                        <li>Em andamento: Sim</li>
+                        <li>Genero: "Ficção de Aventura","Fantasia"</li>
+                    </ul>
+                </section>
+                <section class="filmes">
+                    <!-- Itens da Lista -->
+                    <img src="./assets/narutoshippuden.jpg" alt="Naruto Shippuden">
+                    <ul><li><a href="https://www.crunchyroll.com/pt-br/naruto-shippuden" target="_blank">Naruto Shippuden</a></li>
+                        <li>Avaliação: 4.7</li>
+                        <li>Em andamento: Não</li>
+                        <li>Genero: "Ficção de Aventura","Fantasia Cômica","Artes Marciais"</li>
+                    </ul>
+                </section>
+
+                <section class="filmes">
+                    <!-- Itens da Lista -->
+                    <img src="./assets/hunterxhunter.jpg" alt="HunterxHunter">
+                    <ul><li><a href="https://www.crunchyroll.com/pt-br/hunter-x-hunter" target="_blank">Hunter x Hunter</a></li>
+                        <li>Avaliação: 4.8</li>
+                        <li>Em andamento: Sim</li>
+                        <li>Genero: "Ficção de Aventura","Fantasia","Artes Marciais"</li>
+                    </ul>
+                </section>
+            </div>
         
-        </article>
+        </div>
     </main>
     <!-- Rodapé -->
     <footer>
-        <h2>Criado por Daniel Emidio</h2><br/>
-        <a href="https://github.com/DanielEmidio1988">Github</a>
+        <span>Criado por Daniel Emidio | Projeto Intro Web</span>
+        <a href="https://github.com/DanielEmidio1988"><img src="./assets/octocat.png" alt="icon-Github"></a>
+        <a href="https://www.linkedin.com/in/danielemidio1988/"><img src="./assets/linkedin-box.png" alt="icon-Github"></a>
     </footer>
 
     
