Atualização Botão de Busca

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <form class="box-buscador">
                 <label for="busca"></label>
                 <input type="text" name="busca" id="id-busca" class="input-busca" placeholder="Pesquisar">
-                <button type="submit" class="button-buscar" onclick="buscaAnime()">Buscar</button>
+                <button class="button-buscar" onclick="buscaAnime(event)">Buscar</button>
             </form>
 
                 <!-- 2ª divisão, seçtions -->
